# skill-forge

./: .gitignore  README.md  SKILL-SPECIFICATION.md  SKILL-SPECIFICATION.zh.md  pyproject.toml  requirements.txt
.claude/agents/skill-forge/: agent.md
.claude/skills/skill-forge/: SKILL.md
.github/workflows/: trigger-sync.yml
src/skill_forge/: __init__.py  __main__.py  cli.py  config.py
src/skill_forge/i18n/: __init__.py  i18n_generator.py
src/skill_forge/inference/: __init__.py  category_inference.py
src/skill_forge/llm/: prompts.py  slots.py  test_client.py
src/skill_forge/models/: skill.py  validation.py
src/skill_forge/skill_converter/: __init__.py  agent_converter.py  base.py  converter.py  nl_converter.py  normalize_converter.py
src/skill_forge/skill_optimizer/: optimizer.py
src/skill_forge/skill_validator/: reporter.py  validator.py
src/skill_forge/utils/: yaml_utils.py
tests/: conftest.py
tests/demo/: test_best_3.py  test_worst_3.py
tests/fixtures/: __init__.py
tests/unit/: test_converter.py  test_inference.py  test_meta_yaml.py  test_models.py  test_multilang_generation.py  test_optimizer.py  test_validator.py
