[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-forge"
version = "3.1.0"
description = "Skill 规范检验、转换与优化工具链（v3.1.0 多语言+元数据支持）"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Claude Code User" },
]
keywords = ["skill", "claude-code", "validation", "optimization", "toolchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
skill-forge = "skill_forge.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v"
